# WallLust

./: Cargo.toml  LICENSE  PKGBUILD  README.md  install.sh  walllust-daemon.service  walllust.desktop
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-13-walllust-release-setup.md
docs/superpowers/specs/: 2026-04-13-walllust-release-setup-design.md
src/: common.rs
src/cli/: main.rs
src/daemon/: main.rs
src/gui/: main.rs  video.rs
ui/: appwindow.slint  wallpaper.slint
